--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
-<!Doctype html>
+<!DOCTYPE html>
 <html>
-
-  <head>
-    <title>Saad</title>
-  </head>
-  
-  <body>
-    <h1>Hello Saad</h1>
-  </body>
-
+    <head>
+        <title>Saad - Portfolio</title>
+    </head>
+    <body>
+        <h1>Muhammad Saad</h1>
+        
+    </body>
 </html>
