--- a/index.html
+++ b/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="portfolio.css">
         <title>Saad - Portfolio</title>
     </head>
     <body>
-        <h1>Muhammad Saad</h1>
+        <div class="Header">
+            <h1>Muhammad Saad</h1>
+        </div>
+
+        <img class="profile" src="Profile.jpg" width="512" height="366" >
         
+
+        <hr>
+
+        <pre class="intro">
+            Hello, my name is <b style="color:orange ;">Saad</b>, I am a <b style="color:orange ;">Computer Scientist</b> 
+            and I am working on a company named <b style="color:orange ;">Instant Solution</b> 
+        </pre>
+
+
     </body>
 </html>
