--- a/index.html
+++ b/index.html
@@ -88,30 +88,11 @@
 											<li>Graphics related work.</li>
 											<li>Websites related work</li>
 										</ul>
+									<a href="portfolio.html" class="button primary color2">Check Here</a>
 									</p>
 								</div>
 
-								<div class="gallery">
-									<div class="group span-3">
-										<a href="images/Blue-1.gif" class="image filtered span-3" data-position="bottom"><img src="images/Blue-1.gif" alt="" /></a>
-										<a href="images/white.gif" class="image filtered span-1-5" data-position="center"><img src="images/white.gif" alt="" /></a>
-										<a href="images/black.gif" class="image filtered span-1-5" data-position="bottom"><img src="images/black.gif" alt="" /></a>
-									</div>
-									<a href="images/1.jpg" class="image filtered span-2-5" data-position="top"><img src="images/1.jpg" alt="" /></a>
-									<div class="group span-4-5">
-										<a href="images/2.jpg" class="image filtered span-3" data-position="top"><img src="images/2.jpg" alt="" /></a>
-										<a href="images/back.jpg" class="image filtered span-1-5" data-position="center"><img src="images/back.jpg" alt="" /></a>
-										<a href="images/attack.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/attack.jpg" alt="" /></a>
-										<a href="images/3.jpg" class="image filtered span-3" data-position="top"><img src="images/3.jpg" alt="" /></a>
-									</div>
-									<a href="images/3.4.jpg" class="image filtered span-2-5" data-position="right"><img src="images/3.4.jpg" alt="" /></a>
-									<div class="group span-4-5">
-										<a href="images/computer cover-01.jpg" class="image filtered span-3" data-position="top"><img src="images/computer cover-01.jpg" alt="" /></a>
-										<a href="images/foot.jpg" class="image filtered span-1-5" data-position="center"><img src="images/foot.jpg" alt="" /></a>
-										<a href="images/Known.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/Known.jpg" alt="" /></a>
-										<a href="images/Colour petals-01.jpg" class="image filtered span-3" data-position="top"><img src="images/Colour petals-01.jpg" alt="" /></a>
-									</div>
-								</div>
+								
 							</section>
 
 						<!-- Panel -->
