first desktop change

--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
 							</section>
 							
 						<!-- Panel (Spotlight) -->
-							<section class="panel spotlight medium right" id="first">
+							<!-- <section class="panel spotlight Medium" id="first">
 								<div class="content span-5">
-									<h2 class="major">We Should Work Together!!</h2>
-									<p>Are you an excellent designer? Definitely the best in your school? Have you ever built a website from scratch? I am a computer scientist with more than six years of experience in graphic designing and web designing. Have a look at my portfolio, it has all the answers to your questions.</p>
+									<h2 class="major">Instant Solution</h2>
+									<p></p>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
-									<img src="images/profile_compressed.jpg" alt="" />
+									<img src="images/icons.jpg" alt="" />
 								</div>
-							</section>
+							</section> -->
 
 						<!-- Panel -->
 							<section class="panel color1">
@@ -69,13 +69,13 @@
 						<!-- Panel (Spotlight) -->
 							<section class="panel spotlight large left">
 								<div class="content span-5">
-									<h2 class="major">Experiance</h2>
+									<!-- <h2 class="major">Experiance</h2>
 									<p>I have worked on fiverr for 3 years as a graphic designer, I have created great looking websites for companies. They actually love me because I also create all the graphic elements of their websites.
 										I have also worked on a <b>NFT</b> project.
-									</p>
+									</p> -->
 								</div>
 								<div class="image filtered tinted" data-position="top right">
-									<img src="images/reviews.png" alt="" />
+									<a href="instant_solution.html"><img src="images/instant solution Logo - YouTube Cover Photo - 2560x1440.png" alt="" /></a>
 								</div>
 							</section>
 
