--- a/instant_solution.html
+++ b/instant_solution.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Saaday</title>
+		<title>Instant Solution</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -35,8 +35,8 @@
 							<section class="panel banner right">
 								<div class="content color4 span-3">
 									<h1 class="major">Instant Solution</h1>
-									<p>instant solution is a <b>Software & Web Development</b> Company providing <b>web designing, e-commerce solutions, android apps and mobile app development</b> services.
-										If you are looking for the most trusted name in web development, contact instant solution today.</p>
+									<p><b>instant solution is a Software & Web Development Company providing web designing, e-commerce solutions, android apps and mobile app development services.
+										If you are looking for the most trusted name in web development, contact instant solution today.</b></p>
 									<ul class="actions">
 										<li><a href="instant_solution.html" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
 									</ul>
@@ -52,14 +52,14 @@
 							<section class="panel spotlight large left">
 								<div class="intro">
 									<h1 class="major">Services</h1>
-									<p>We provide all services to start your business.
+									<p><B>We provide all services to start a sucessful business.</B>
 										<ul>
-											<li>Logo Design.</li>
-											<li>Banners and posters.</li>
-											<li>Stationery kit.</li>
-											<li>Domain Registration.</li>
-											<li>Business Website.</li>
-											<li>Advertisement</li>
+											<li><b>Logo Design.</b></li>
+											<li><b>Banners and posters.</b></li>
+											<li><b>Stationery kit.</b></li>
+											<li><b>Domain Registration.</b></li>
+											<li><b>Business Website.</b></li>
+											<li><b>Advertisement.</b></li>
 										</ul>
 									</p>
 								</div>
@@ -83,8 +83,8 @@
 									<h1 class="major">Portfolio</h1>
 									<p><h3>Here is all my work.</h3>
 										<ul>
-											<li>Graphics related work.</li>
-											<li>Websites related work</li>
+											<li><b>Graphics related work.</b></li>
+											<li><b>Websites related work.</b></li>
 										</ul>
 									<a href="portfolio.html" class="button primary color2">Check Here</a>
 									</p>
