instant wall changed

--- a/instant_solution.html
+++ b/instant_solution.html
@@ -27,7 +27,7 @@
 									</p> -->
 								</div>
 								<div class="image filtered tinted" data-position="top right">
-									<a href="instant_solution.html"><img src="images/instant solution Logo - YouTube Cover Photo - 2560x1440.png" alt="" /></a>
+									<a href="instant_solution.html"><img src="images/instant.png" alt="" /></a>
 								</div>
 							</section>
 
