--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 									</p> -->
 								</div>
 								<div class="image filtered tinted" data-position="center">
-									<a href="instant_solution.html" ><img src="images/instant solution Logo - YouTube Cover Photo - 2560x1440.png" alt=""  /></a>
+									<a href="instant_solution.html" ><img src="images/ANIMATIONS/instant solution.jpg" alt=""  /></a>
 								</div>
 							</section>
 
